[gd_scene load_steps=7 format=3 uid="uid://dnek3vlbik760"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_ix61v"]
[ext_resource type="Texture2D" uid="uid://casstma5vyvvx" path="res://assets/2d/shooterMinigame/bulletCorrupt.png" id="2_t0xj2"]
[ext_resource type="Texture2D" uid="uid://bpjc7aifwb74" path="res://assets/2d/shooterMinigame/xExplosionSpriteCorrupt.png" id="3_6dpk4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xeat0"]
size = Vector2(24, 24)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iw82f"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cmxq2"]
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2
attractor_interaction_enabled = false

[node name="bullet" type="Area2D"]
position = Vector2(892, 251)
collision_layer = 16
script = ExtResource("1_ix61v")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_t0xj2")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xeat0")

[node name="decayTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="explosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_iw82f")
position = Vector2(1, -1)
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_cmxq2")
texture = ExtResource("3_6dpk4")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="decayTimer" to="." method="_on_decay_timer_timeout"]
